fix: handle duplicate keys in map collectors and improve CORS origin configuration logic